# EventBrite_Clone

./: .env  .gitignore  README.md  requirements.txt
API Documntation/: index.html
EventBrite_Clone_Backend-SW-Project-Backend/: pyproject.toml  requirements.txt
EventBrite_Clone_Backend-SW-Project-Backend/eventbrite/booking/: admin.py  models.py  views.py
EventBrite_Clone_Backend-SW-Project-Backend/eventbrite/booking/migrations/: 0002_discount_event_id.py
EventBrite_Clone_Backend-SW-Project-Backend/eventbrite/docs/: booking.rst  eventbrite.rst  index.rst
EventBrite_Clone_Backend-SW-Project-Backend/eventbrite/docs/_build/doctrees/: booking.doctree  environment.pickle  index.doctree  manage.doctree  user.doctree  user.migrations.doctree
EventBrite_Clone_Backend-SW-Project-Backend/eventbrite/event/: admin.py  serializers.py  urls.py
EventBrite_Clone_Backend-SW-Project-Backend/eventbrite/event/migrations/: 0002_category.py  0004_locations.py  0007_delete_user.py  0010_rename_name_event_title_rename_type_event_type_and_more.py  0011_event_category.py  0013_event_online.py  0016_alter_category_options_alter_event_options_and_more.py
EventBrite_Clone_Backend-SW-Project-Backend/eventbrite/eventManagment/: apps.py  views.py
EventBrite_Clone_Backend-SW-Project-Backend/eventbrite/eventbrite/: settings.py  urls.py
EventBrite_Clone_Backend-SW-Project-Backend/eventbrite/user/: models.py  urls.py
EventBrite_Clone_Backend-SW-Project-Backend/eventbrite/user/migrations/: 0003_delete_interests_delete_user.py  0004_initial.py
eventbrite/: 79127307_attendee_report.csv  (+2 more)
(+320 files in other folders)
